2023-09-19T16:11:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6238173397 # 1915
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-19
* notice: last 14d: unq all: 5 17
* notice: prev accum: outdated-unq outdated-all / unq all: 728 1351 / 742 1370
* notice: next accum: outdated-unq outdated-all / unq all: 730 1353 / 742 1370
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-05] / []

2023-09-19T08:12:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6232909475 # 1914
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-19
* notice: last 14d: unq all: 6 19
* notice: prev accum: outdated-unq outdated-all / unq all: 728 1351 / 741 1369
* notice: next accum: outdated-unq outdated-all / unq all: 728 1351 / 742 1370
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-19]

2023-09-19T00:42:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6229648572 # 1913
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-19
* notice: last 14d: unq all: 6 18
* notice: prev accum: outdated-unq outdated-all / unq all: 728 1351 / 741 1368
* notice: next accum: outdated-unq outdated-all / unq all: 728 1351 / 741 1369
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-09-18]

2023-09-18T16:12:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6225158083 # 1912