@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-19T16:11:59Z",
+  "timestamp" : "2023-09-20T00:42:18Z",
   "count_outdated" : 1353,
   "uniques_outdated" : 730,
-  "count" : 1370,
+  "count" : 1371,
   "uniques" : 742,
   "clones" : [
     {
@@ -97,9 +97,9 @@
     },
     {
       "timestamp": "2023-09-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
